1.13/Todo_App/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapp-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoapp
  template:
    metadata:
      labels:
        app: todoapp
    spec:
      volumes:
        - name: shared-storage
          persistentVolumeClaim:
            claimName: dwk-pvc
      containers:
        - name: todoapp
          image: todoapp:1.13
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: shared-storage
              mountPath: /usr/src/app/files
